[package]
name = "beautiful_crypto_address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.20.3", features = ["rand", "bitcoin_hashes", "serde", "rand-std"] }
sha3 = "0.9.1"
num_cpus = "1.4.0"
clap = "2.33.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"